--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -11,7 +11,7 @@
 <body>
     {{user}}
     <button><a href="{% provider_login_url 'google' %}">Google Login</a></button>
-    <button><a href="{% provider_login_url 'facebook' method='js_sdk'%}">Facebook Login</a></button>
+    <button><a href="{% provider_login_url 'facebook' method='oauth2'%}">Facebook Login</a></button>
 </body>
 
 </html>
